cloudformation/cloudformer-k8s-cluster-k8s-the-hard-way.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc0f0d61aaaeb469d3c": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.240.0.0/24",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ]
      }
    },
    "subnet0293fb97ea87aa73a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.240.0.0/24",
        "AvailabilityZone": "us-west-2b",
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ]
      }
    },
    "igw08305a7f0a8f1a3ec": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ]
      }
    },
    "dopt00a32893a08292cb9": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ],
        "DomainName": "us-west-2.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl0880ee7820c6a5475": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        }
      }
    },
    "rtb03991342d16a5382a": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        }
      }
    },
    "rtb0be5f5ee8d3d442de": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ]
      }
    },
    "instancei005caa5a291cb31de": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "K8S",
            "Value": "controller"
          },
          {
            "Key": "Name",
            "Value": "controller-1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.11",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "instancei0c05d32d9231c01c7": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "worker-2"
          },
          {
            "Key": "K8S",
            "Value": "worker"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.22",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "instancei0e60490d86b237d16": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "K8S",
            "Value": "controller"
          },
          {
            "Key": "Name",
            "Value": "controller-2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.12",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "instancei07226da0ceb217234": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "worker-0"
          },
          {
            "Key": "K8S",
            "Value": "worker"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.20",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "instancei01452e22b10058cd9": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "K8S",
            "Value": "controller"
          },
          {
            "Key": "Name",
            "Value": "controller-0"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.10",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "instancei02b560af9ef324568": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-51537029",
        "InstanceType": "t2.micro",
        "KeyName": "kubernetes",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "worker-1"
          },
          {
            "Key": "K8S",
            "Value": "worker"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0293fb97ea87aa73a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.240.0.21",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgkubernetes"
              }
            ]
          }
        ]
      }
    },
    "sgkubernetes": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Kubernetes security group",
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "kubernetes-the-hard-way"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0880ee7820c6a5475"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0880ee7820c6a5475"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0880ee7820c6a5475"
        },
        "SubnetId": {
          "Ref": "subnet0293fb97ea87aa73a"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        },
        "InternetGatewayId": {
          "Ref": "igw08305a7f0a8f1a3ec"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0be5f5ee8d3d442de"
        },
        "SubnetId": {
          "Ref": "subnet0293fb97ea87aa73a"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.200.0.0/24",
        "RouteTableId": {
          "Ref": "rtb0be5f5ee8d3d442de"
        },
        "InstanceId": {
          "Ref": "instancei07226da0ceb217234"
        }
      }
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.200.1.0/24",
        "RouteTableId": {
          "Ref": "rtb0be5f5ee8d3d442de"
        },
        "InstanceId": {
          "Ref": "instancei02b560af9ef324568"
        }
      }
    },
    "route3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "10.200.2.0/24",
        "RouteTableId": {
          "Ref": "rtb0be5f5ee8d3d442de"
        },
        "InstanceId": {
          "Ref": "instancei0c05d32d9231c01c7"
        }
      }
    },
    "route4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb0be5f5ee8d3d442de"
        },
        "GatewayId": {
          "Ref": "igw08305a7f0a8f1a3ec"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0f0d61aaaeb469d3c"
        },
        "DhcpOptionsId": {
          "Ref": "dopt00a32893a08292cb9"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "tcp",
        "FromPort": "6443",
        "ToPort": "6443",
        "CidrIp": "24.9.31.138/32"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "-1",
        "CidrIp": "10.240.0.0/24"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "-1",
        "CidrIp": "10.200.0.0/16"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "24.9.31.138/32"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "tcp",
        "FromPort": "30754",
        "ToPort": "30754",
        "CidrIp": "24.9.31.138/32"
      }
    },
    "ingress6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "icmp",
        "FromPort": "-1",
        "ToPort": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgkubernetes"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "K8s cluster stack from existing infra - created kubernetes-the-hard-way"
}
